--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 # Basic
-PRIVATE_KEY =''
-WALLET_ADDRESS = ''
+PRIVATE_KEY ='ADD ME USING README'
+WALLET_ADDRESS = 'ADD ME USING README'
 
-BYBIT_API_KEY = ''
-BYBIT_API_SECRET = ''
+BYBIT_API_KEY = 'ADD ME USING README'
+BYBIT_API_SECRET = 'ADD ME USING README'
 
 # Testnet
-USE_TEST_NET = ''
-BYBIT_API_KEY_TEST = ''
-BYBIT_API_SECRET_TEST = ''
+USE_TEST_NET = 'true'
+BYBIT_API_KEY_TEST = 'ADD ME USING README'
+BYBIT_API_SECRET_TEST = 'ADD ME USING README'
 
 # Web app
-BACKEND_URL = ''
-BACKEND_WS_URL = ''
-FRONTEND_URL = ''
+BACKEND_URL = 'ADD ME USING README'
+BACKEND_WS_URL = 'ADD ME USING README'
+FRONTEND_URL = 'ADD ME USING README'
 
 # Dont chage
 SHOW_MORE_LOGS = 'false'
